// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edit: Component should render correctly 1`] = `
<Fragment>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Edit"
        id="project.createDirectory.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Directories"
        id="project.createDirectory.title"
        values={Object {}}
      />
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Edit"
        id="project.createDirectory.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Directories"
        id="project.createDirectory.title"
        values={Object {}}
      />
    }
  />
  <styled.form
    onSubmit={[Function]}
  >
    <TextInput
      checkOnlyErrors={false}
      directory={
        Object {
          "name": "name",
          "project": "1",
        }
      }
      errors={Object {}}
      fetchDirectory={
        [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "directoryId": "1",
              },
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": Promise {},
            },
          ],
        }
      }
      fullWidth={true}
      handleBlur={[Function]}
      handleChange={[Function]}
      handleSubmit={[Function]}
      history={
        Object {
          "push": [Function],
        }
      }
      intl={
        Object {
          "formatMessage": [Function],
        }
      }
      isEdit={true}
      isValid={true}
      label="Directory Name"
      match={
        Object {
          "params": Object {
            "directoryId": "1",
          },
        }
      }
      name="name"
      onChange={[Function]}
      placeholder="Name"
      touched={Object {}}
      value="name"
      values={
        Object {
          "name": "name",
        }
      }
    />
    <NavigationContainer
      hideOnDesktop={false}
      right={false}
    >
      <BackButton
        disabled={false}
        id="backBtn"
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Back"
          id="project.createDirectory.cancel"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        disabled={false}
        id="createDirectoryBtn"
        loading={false}
        type="submit"
      >
        <FormattedMessage
          defaultMessage="Save"
          id="project.createDirectory.createDirectory"
          values={Object {}}
        />
      </NextButton>
    </NavigationContainer>
  </styled.form>
</Fragment>
`;

exports[`Edit: Component should render correctly with loader 1`] = `
<Fragment>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Edit"
        id="project.createDirectory.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Directories"
        id="project.createDirectory.title"
        values={Object {}}
      />
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Edit"
        id="project.createDirectory.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Directories"
        id="project.createDirectory.title"
        values={Object {}}
      />
    }
  />
  <styled.form
    onSubmit={[Function]}
  >
    <Loader />
    <NavigationContainer
      hideOnDesktop={false}
      right={false}
    >
      <BackButton
        disabled={false}
        id="backBtn"
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Back"
          id="project.createDirectory.cancel"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        disabled={false}
        id="createDirectoryBtn"
        loading={false}
        type="submit"
      >
        <FormattedMessage
          defaultMessage="Save"
          id="project.createDirectory.createDirectory"
          values={Object {}}
        />
      </NextButton>
    </NavigationContainer>
  </styled.form>
</Fragment>
`;
